<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service_hint">Cost of Service</string>
    <string name="service_question_text">How was the service?</string>
    <string name="option_amazing_text">Amazing (20%)</string>
    <string name="option_good_text">Good (18%)</string>
    <string name="option_okay_text">Okay (15%)</string>
    <string name="round_tip_text">Round up tip?</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="tip_result_text">Tip Amount: %s</string>
</resources>