<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_service_hint"
        android:autofillHints="0.00" />

    <TextView
        android:id="@+id/service_question"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/service_question_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/option_twenty_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question" >

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/option_amazing_text" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/option_good_text" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/option_okay_text" />

    </RadioGroup>

    <Switch
        android:id="@+id/round_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:checked="true"
        android:text="@string/round_tip_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/calculate_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_tip"/>

    <TextView
        android:id="@+id/tip_result"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tip_result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>